--- a/src/main/resources/assets/john_mod/lang/en_us.json
+++ b/src/main/resources/assets/john_mod/lang/en_us.json
@@ -6,5 +6,7 @@
   "config.john_mod.armor_type":  "Armor type",
   "config.john_mod.armor_type.tooltip": "The type of armor the John has to have to get the name tag.",
   "config.john_mod.rendering_type":  "Rendering type",
-  "config.john_mod.rendering_type.tooltip": "Determines whether Johns will have their name tags rendered through walls or not."
+  "config.john_mod.rendering_type.tooltip": "Determines whether Johns will have their name tags rendered through walls or not.",
+  "config.john_mod.override_custom_names": "Override custom names",
+  "config.john_mod.override_custom_names.tooltip": "Determines whether the mod will override any custom names you set using name tags."
 }
